fix: added clear float to page sections (#324)
* fix: added clear float to page sections

* fix: added clear to overlapping sections

* fix: cleaned up classname

--- a/src/theme/ItaliaTheme/Components/_cmp-timeline.scss
+++ b/src/theme/ItaliaTheme/Components/_cmp-timeline.scss
@@ -26,6 +26,7 @@
 
 .calendar-vertical {
   color: $link-color;
+  clear: both;
 
   &::after {
     display: block;
