--- a/src/theme/ItaliaTheme/Views/_evento.scss
+++ b/src/theme/ItaliaTheme/Views/_evento.scss
@@ -1,4 +1,8 @@
 body.contenttype-event {
+  .parteciperanno-section {
+    clear: both;
+  }
+
   .supported-by {
     margin-bottom: 1rem;
   }
