--- a/src/theme/ItaliaTheme/_common.scss
+++ b/src/theme/ItaliaTheme/_common.scss
@@ -3,6 +3,7 @@
   .text-justify {
     text-align: justify;
   }
+
   button.btn,
   button.rounded-right {
     &:focus {
@@ -30,6 +31,7 @@
 
   a.btn-tertiary {
     color: $tertiary-text !important;
+
     &:focus {
       border-color: $focus-outline-color;
       box-shadow: inset 0 1px 0 $focus-outline-color,
@@ -58,6 +60,7 @@
       }
     }
   }
+
   .btn-primary,
   .btn-secondary,
   .btn-tertiary,
@@ -66,12 +69,15 @@
       fill: $external-link-fill-buttons !important;
     }
   }
+
   .external-link {
     fill: $link-color !important;
+
     &:hover {
       fill: #004080 !important;
     }
   }
+
   .it-footer-small-prints-list .external-link {
     fill: $external-link-fill-subfooter !important;
   }
@@ -79,4 +85,10 @@
 
 .icon.external-link.icon-xs {
   height: 1rem;
+}
+
+section.it-page-section,
+.last-modified,
+.it-page-subsection {
+  clear: both;
 }
