--- a/src/theme/ItaliaTheme/_main.scss
+++ b/src/theme/ItaliaTheme/_main.scss
@@ -143,6 +143,7 @@ iframe {
 
   .draftjs-buttons {
     margin: 0;
+    clear: both;
 
     a {
       display: inline-block;
